--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -9,18 +9,22 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">
+      <div class="sides">
+        <div class="logo">
         LOGO
-      </div>
-      <ul class="links">
+        </div>
+        <ul class="links">
         <li><a href="https://google.com">link-one</a></li>
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
-      </ul>
-      <button class="notifications">
+        </ul>
+      </div>
+      <div class="sides">
+        <button class="notifications">
         1 new notification
-      </button>
-      <div class="profile-image"></div>
+        </button>
+        <div class="profile-image"></div>
+      </div>
     </div>
   </body>
 </html>
